# here-location-services-python

./: .darglint  .gitignore  .isort.cfg  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: binder.yml  main.yml
binder/: environment.yml  postBuild
ci/: environment.yml
docs/notebooks/: README.md  authentication.ipynb  autosuggest.ipynb  destination_weather.ipynb  isoline_routing_restaurant_search.ipynb  location_services.ipynb  matrix_routing.ipynb  routing.ipynb  routing_api.ipynb  tour_planning.ipynb
docs/source/: autosuggest.rst  bicycle_route.rst  browse.rst  car_route.rst  conf.py  dest_weather.rst  discover.rst  flexible_mode.rst  geocode.rst  here_location_services.__version__.rst  here_location_services.apis.rst  here_location_services.autosuggest_api.rst  here_location_services.config.autosuggest_config.rst  here_location_services.config.base_config.rst  here_location_services.config.dest_weather_config.rst  here_location_services.config.rst  (+38 more)
here_location_services/: __init__.py  __version__.py  apis.py  autosuggest_api.py  config.py  constants.py  destination_weather_api.py  exceptions.py  geocoding_search_api.py  isoline_routing_api.py  ls.py  matrix_routing_api.py  responses.py  routing_api.py  tour_planning_api.py  utils.py
scripts/: build_docs.sh  make_artifact_homepage.py
tests/: conftest.py  test_exceptions.py  test_ls.py  test_ls_apis.py  test_ls_auth_token.py  test_platform_api.py  test_platform_credentials.py  test_utils.py
(+14 files in other folders)
