[bdist_wheel]
universal=1

[metadata]
name = here-location-services
author = HERE Europe B.V.
description = HERE Location Services for Python
long-description = file: README.md
license = Apache-2.0
platform = any
keywords =
    API
    REST
    Client
    Locaton Services
classifiers =
   Development Status :: 4 - Beta
   Intended Audience :: Developers
   Topic :: Software Development :: Libraries
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/heremaps/here-location-services-python/issues
    Source = https://github.com/heremaps/here-location-services-python
[options]
python_requires >= 3.6

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 99
ignore = E203,W503

[isort]
line_length=99